--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.19",
     "pdfjs-dist": "^4.8.69",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "suneditor-react": "^3.6.1",
     "tailwind-merge": "^2.5.4",
