--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
+    "suneditor": "^2.47.0",
     "suneditor-react": "^3.6.1",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
