--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,3 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript",
-        "eslint:recommended",
-        "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:@typescript-eslint/recommended"
-      ]
+  "extends": ["next/core-web-vitals", "next/typescript"]
 }
