--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": { "@typescript-eslint/no-empty-object-type": "off", "no-unused-vars": "off", "@typescript-eslint/no-unused-vars": ["error"] }
 }
