--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -42,7 +43,7 @@
   },
   "eslintConfig": {
     "rules": {
-        "no-var": 0
+      "no-var": 0
     }
   }
 }
