--- a/package.json
+++ b/package.json
@@ -35,11 +35,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "eslintConfig": {
@@ -48,6 +47,7 @@
     }
   },
   "engines": {
-    "node": "22.X"
+    "npm": "^10.9.0",
+    "node": "^22.11.0"
   }
 }
