--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx prisma generate && next build",
     "start": "next start -H 0.0.0.0 -p  ${PORT:-8080}",
     "lint": "next lint",
-    "export": "npm run build && next export"
+    "export": "npm run build && next export",
+    "build:css": "postcss ./static/css/main.css -o ./static/css/main-prefixed.css"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -48,6 +49,6 @@
   },
   "engines": {
     "npm": "10.9.0",
-    "node": "22.0.0"
+    "node": "22.11.0"
   }
 }
