--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@ungap/with-resolvers": "^0.1.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
