--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "file-saver": "^2.0.5",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.19",
-    "pdfjs-dist": "^4.8.69",
+    "pdfjs-dist": "3.11.174",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
