--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "build": "npx prisma@3.6.1 generate && next build",
     "start": "next start -H 0.0.0.0 -p  ${PORT:-8080}",
     "lint": "next lint",
     "export": "npm run build && next export",
