--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma@6.3.1 generate && next build",
+    "build": "npx prisma generate && next build",
     "start": "next start -H 0.0.0.0 -p  ${PORT:-8080}",
     "lint": "next lint",
     "export": "npm run build && next export",
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "6.3.1",
+    "@prisma/client": "^6.3.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/typography": "^0.5.15",
@@ -22,9 +22,10 @@
     "clsx": "^2.1.1",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
-    "next": "15.0.3",
+    "next": "^15.5.7",
     "next-auth": "^5.0.0-beta.19",
     "pdfjs-dist": "3.11.174",
+    "prisma": "^6.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
